--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,7 +28,7 @@
 
     <footer>
         <footer>
-            <p>Hecho con 💛 por <a href="cv-gaspar-munoz-05-2024.pdf" download="cv-gaspar-munoz-04-2024"  target="_blank"  rel="noopener noreferrer">Gaspar Muñoz</a></p>
+            <p>made with 💛 by <a href="cv-gaspar-munoz-05-2024.pdf" download="cv-gaspar-munoz-04-2024"  target="_blank"  rel="noopener noreferrer">Gaspar Muñoz</a></p>
         </footer>
         
     </footer>
